Updated footer to always show correct year and correct spacing. Added Contact page. Moved index from subpages to root. Updated the about page to reflect me better. Changed the navigation to scale better with smaller screens.

--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,23 @@ footer ul li {
 }
 
 nav ul {
+  font-size: 1.3em;
   padding-top: 0.3em;
 }
 
 nav ul.navItems li.navTitle {
   float: right;
+}
+
+@media screen and (max-width: 780px) {
+    nav ul {
+      padding-top: 0.3em;
+      text-align: center;
+  }
+  
+   nav ul.navItems li.navTitle {
+    display: none;
+  }
 }
 
 a {
@@ -129,6 +141,11 @@ footer {
   font-size: 0.85em;
   font-weight: normal;
   padding-left: 1em;
+}
+
+.container td{
+  line-height: 1.3em;
+  padding-right: 1em;
 }
 
 .highlighter-rouge {
